--- a/train.ipynb
+++ b/train.ipynb
@@ -1245,9 +1245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('fastai': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitfastaicondaa303db62154b4ee68a261d47981939be"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1259,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
